<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation2"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.aep.ui.home.StudentHomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_studenthome">

    <!-- Action inside the HomeFragment -->
    <action
        android:id="@+id/action_homeStudentFragment_to_SportsRegistrationActivity"
        app:destination="@id/sportsRegistration" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.aep.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.aep.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <activity
        android:id="@+id/sportsRegistration"
        android:name="com.example.aep.Build_Team"
        android:label="Sports Registration Activity" />

</navigation>